--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@
 
 h2{
     
- background-color: turquoise;
+ background-color: navajowhite;
  color: darkblue
  
 }
 
 p2{
- 
+ color: gold;
  align-items: center
+ 
 
 }
 
